Fix overflow

--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ body {
 	position: relative; 
 	margin: 60px auto;
 	width: 900px;
-	height: 700px;
 	overflow: hidden;
 }
 
